Fixed button that was not centered

--- a/src/components/style/_pricing.scss
+++ b/src/components/style/_pricing.scss
@@ -3,7 +3,7 @@
 .pricing {
   margin-top: 10rem;
   height: 70vh;
-
+  position: relative;
   .heading-secondary {
     &::after {
       content: 'Service packages';
